--- a/index.html
+++ b/index.html
@@ -338,11 +338,11 @@
 									</li>
 									<li>
 										<h3 class="icon fa-envelope-o"><span class="label">Email</span></h3>
-										<a href="#">rmishr19@asu.edu</a>
+										<a href="mailto:rmishr19@asu.edu" target="_blank">rmishr19@asu.edu</a>
 									</li>
                                     <li>
                                         <h3 class="icon fa-envelope-o"><span class="label">Email</span></h3>
-                                        <a href="#">rishabh.zn200@gmail.com</a>
+                                        <a href="mailto:rishabh.zn200@gmail.com" target="_blank">rishabh.zn200@gmail.com</a>
                                     </li>
 								</ul>
 							</div>
