--- a/index.html
+++ b/index.html
@@ -257,7 +257,7 @@
 
 
                             <!-- Form submit -->
-                            <script src="http://code.jquery.com/jquery-1.11.3.min.js"></script>
+                            <script src="https://code.jquery.com/jquery-1.11.3.min.js"></script>
                             <script>
                                 (function($){
                                     function processForm( e ){
