--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 				<div class="inner">
 					<a href="#" class="image avatar"><img src="images/avatar.jpg" alt="" /></a>
 					<h1><strong>Rishabh Mishra</strong><br />
-					Master's Student<br/>Computer Science<br/>Arizona State University<br />
+					Masters Student<br/>Computer Science<br/>Arizona State University<br />
 					</h1>
 				</div>
 			</header>
@@ -80,7 +80,7 @@
                                     <ul>
                                         <li>Pubmed Data Analysis to find similar articles.</li>
                                         <li>Apptopia Data Extraction and Storage using Apptopia API</li>
-                                        <li><b>Tech Used:</b> Gensim, Doc2Vec, LSA, TFIDF, Python, Matplotlib, TSNE, Pandas, Multiprocessing, MPI, HDF5</li>
+                                        <li><b>Tech Used:</b> Gensim, NLTK, Doc2Vec, LSA, TFIDF, Python, Matplotlib, TSNE, Pandas, Multiprocessing, MPI, HDF5, PySpark</li>
                                     </ul>
 
 									<a href="#0" class="cd-read-more">Read more</a>
