--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 						<header class="major">
 							<h2>About Me</h2>
 						</header>
-						<p>Hi, I am Rishabh. Currently pursuing my masters in Computer Science from Arizona State University and looking for the opportunities to work on relevant, transformative and impactful technology. My key areas of interest include Data Science and Machine Learning. I have over 4 years of experience in working with Python and its libraries.</p>
+						<p>Hi, I am Rishabh. Currently pursuing my masters in Computer Science from Arizona State University and looking for the opportunities to work on relevant, transformative and impactful technology. My key areas of interest include Data Science, Machine Learning and Data Visualization. I have over 4 years of experience in working with Python and its libraries.</p>
 						<!--<ul class="actions">-->
 							<!--<li><a href="#" class="button">Learn More</a></li>-->
 						<!--</ul>-->
