--- a/index.html
+++ b/index.html
@@ -206,7 +206,7 @@
 							<article class="col-6 col-12-xsmall work-item">
 								<a href="images/fulls/mobile.png" class="image fit thumb"><img src="images/thumbs/mobile.png" alt="" /></a>
 								<h3>Mobile apps data extaction</h3>
-								<p><a href="" target="_blank">Mobile Apps Data Extraction from App Store and Play Store using Apptopia API.</a></p>
+								<p><a href="https://github.com/rishabhzn200/Apptopia-Data-Extraction" target="_blank">Mobile Apps Data Extraction from App Store and Play Store using Apptopia API.</a></p>
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
 								<a href="images/fulls/bvae.png" class="image fit thumb"><img src="images/thumbs/bvae.png" alt="" /></a>
