--- a/index.html
+++ b/index.html
@@ -10,6 +10,11 @@
 		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/meyer-reset/2.0/reset.min.css">
 		<link rel="stylesheet" href="css/style.css">
 		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+
+		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css">
+		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+		<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
+
 		<link rel="stylesheet" href="assets/css/main.css">
 		<link rel="stylesheet" href="./css/datastyle.css">
 
@@ -62,6 +67,58 @@
 					<section>
 						<h2>Education and Work History</h2>
 						<section id="cd-timeline" class="cd-container">
+
+							<div class="cd-timeline-block">
+								<div class="cd-timeline-img cd-picture">
+									<!-- <a><i class="fa fa-university cd-picture" id=""></i></a> -->
+									<!-- <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/148866/cd-icon-picture.svg" alt="Picture"> -->
+									<img src="./images/svg/work1.png" alt="Picture">
+
+								</div>
+
+
+								<div class="cd-timeline-content">
+									<h2>Software Engineer Intern @ AdviNOW Medical</h2>
+									<p>
+
+									</p>
+
+									<ul>
+										<li>Working on the development of a machine learning system for disease diagnosis & treatment.</li>
+										<li>Optimizing and parallelizing algorithms for analyzing large data sets.</li>
+										<!--<li><b>Tech Used:</b> Gensim, NLTK, Doc2Vec, LSA, TFIDF, Python, Matplotlib, TSNE, Pandas, Multiprocessing, MPI, HDF5, PySpark</li>-->
+									</ul>
+
+									<!--<a href="#0" class="cd-read-more">Read more</a>-->
+									<!--<button type="button" class="btn btn-info btn-sm" data-toggle="modal" data-target="#myModal">Read More</button>-->
+									<a href="#0" class="cd-read-more">Read more</a>
+									<span class="cd-date">Jan 2019 - Apr 2019</span>
+								</div> <!-- cd-timeline-content -->
+							</div> <!-- cd-timeline-block -->
+
+							<!--&lt;!&ndash;Modal&ndash;&gt;-->
+							<!--&lt;!&ndash; Modal &ndash;&gt;-->
+							<!--<div class="modal fade" id="myModal" role="dialog">-->
+								<!--<div class="modal-dialog modal-lg">-->
+									<!--<div class="modal-content">-->
+										<!--<div class="modal-header">-->
+											<!--<button type="button" class="close" data-dismiss="modal">&times;</button>-->
+											<!--<h4 class="modal-title">Modal Header</h4>-->
+										<!--</div>-->
+										<!--<div class="modal-body">-->
+											<!--<p>This is a large modal.</p>-->
+										<!--</div>-->
+										<!--<div class="modal-footer">-->
+											<!--<button type="button" class="btn btn-default" data-dismiss="modal">Close</button>-->
+										<!--</div>-->
+									<!--</div>-->
+								<!--</div>-->
+							<!--</div>-->
+
+
+							<!--&lt;!&ndash;Modal End&ndash;&gt;-->
+
+
 							<div class="cd-timeline-block">
 								<div class="cd-timeline-img cd-picture">
 									<!-- <a><i class="fa fa-university cd-picture" id=""></i></a> -->
@@ -84,7 +141,7 @@
                                     </ul>
 
 									<a href="#0" class="cd-read-more">Read more</a>
-									<span class="cd-date">May 2018 - Present</span>
+									<span class="cd-date">May 2018 - Jan 2019</span>
 								</div> <!-- cd-timeline-content -->
 							</div> <!-- cd-timeline-block -->
 
@@ -192,6 +249,9 @@
 							</div> <!-- cd-timeline-block -->
 						</section> <!-- cd-timeline -->
 					</section>
+
+
+
 
 
 				<!-- Recent Projects -->
