--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 
 				<!-- Skills -->
 					<section>
-						<h2>My Skills</h2>
+						<h2>Skills</h2>
 						<div style="width: 100%;overflow:auto;">
 							<div style="float:left; width: 70%">
 								<svg class="skillssvg" width="80%" height=100%></svg>
