--- a/index.html
+++ b/index.html
@@ -78,14 +78,40 @@
 
 
 								<div class="cd-timeline-content">
+									<h2>SDE @ Amazon</h2>
+									<p>
+										<b>FireTV Experience Team</b>
+									</p>
+
+									<ul>
+
+									</ul>
+
+									<!--<a href="#0" class="cd-read-more">Read more</a>-->
+									<!--<button type="button" class="btn btn-info btn-sm" data-toggle="modal" data-target="#myModal">Read More</button>-->
+									<a href="#0" class="cd-read-more">Read more</a>
+									<span class="cd-date">Jul 2019 - Current</span>
+								</div> <!-- cd-timeline-content -->
+							</div>
+
+							<div class="cd-timeline-block">
+								<div class="cd-timeline-img cd-picture">
+									<!-- <a><i class="fa fa-university cd-picture" id=""></i></a> -->
+									<!-- <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/148866/cd-icon-picture.svg" alt="Picture"> -->
+									<img src="./images/svg/work1.png" alt="Picture">
+
+								</div>
+
+
+								<div class="cd-timeline-content">
 									<h2>Software Engineer Intern @ AdviNOW Medical</h2>
 									<p>
 
 									</p>
 
 									<ul>
-										<li>Working on the development of a machine learning system for disease diagnosis & treatment.</li>
-										<li>Optimizing and parallelizing algorithms for analyzing large data sets.</li>
+										<li>Worked on the development of a machine learning system for disease diagnosis & treatment.</li>
+										<li>Worked on ptimizing and parallelizing algorithms for analyzing large data sets.</li>
 										<!--<li><b>Tech Used:</b> Gensim, NLTK, Doc2Vec, LSA, TFIDF, Python, Matplotlib, TSNE, Pandas, Multiprocessing, MPI, HDF5, PySpark</li>-->
 									</ul>
 
