--- a/index.html
+++ b/index.html
@@ -414,13 +414,11 @@
 								<ul class="labeled-icons">
 									<li>
 										<h3 class="icon fa-home"><span class="label">Address</span></h3>
-										1130 East Orange St.<br />
-										Tempe, AZ 85281<br />
-										United States
+										Currently in United States
 									</li>
 									<li>
 										<h3 class="icon fa-mobile"><span class="label">Phone</span></h3>
-										480-492-0215
+										Removed for privacy.
 									</li>
 									<li>
 										<h3 class="icon fa-envelope-o"><span class="label">Email</span></h3>
