--- a/index.html
+++ b/index.html
@@ -440,9 +440,9 @@
 			<footer id="footer">
 				<div class="inner">
 					<ul class="icons">
-						<li><a href="https://twitter.com/RISHABHZN200" class="icon fa-twitter" target="_blank"><span class="label">Twitter</span></a></li>
+						<li><a href="" class="icon fa-twitter" target="_blank"><span class="label">Twitter</span></a></li>
 						<li><a href="https://github.com/rishabhzn200" class="icon fa-github" target="_blank"><span class="label">Github</span></a></li>
-						<li><a href="https://www.facebook.com/" class="icon fa-facebook-official" target="_blank"><span class="label">Facebook</span></a></li>
+						<li><a href="" class="icon fa-facebook-official" target="_blank"><span class="label">Facebook</span></a></li>
 						<li><a href="mailto:rishabh.zn200@gmail.com" class="icon fa-envelope-o" target="_blank"><span class="label">Email</span></a></li>
 					</ul>
 					<ul class="copyright">
