--- a/index.html
+++ b/index.html
@@ -15,6 +15,16 @@
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 		<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
 
+		<!-- Google Analytics tag (gtag.js) -->
+		<script async src="https://www.googletagmanager.com/gtag/js?id=G-SHXN7Y0QQP"></script>
+		<script>
+			window.dataLayer = window.dataLayer || [];
+			function gtag(){dataLayer.push(arguments);}
+			gtag('js', new Date());
+
+			gtag('config', 'G-SHXN7Y0QQP');
+		</script>
+
 		<link rel="stylesheet" href="assets/css/main.css">
 		<link rel="stylesheet" href="./css/datastyle.css">
 
