Updating index.html

--- a/index.html
+++ b/index.html
@@ -49,10 +49,7 @@
 						<header class="major">
 							<h2>About Me</h2>
 						</header>
-						<p>Hi, I am Rishabh. Currently pursuing my masters in Computer Science from Arizona State University and looking for the opportunities to work on relevant, transformative and impactful technology. My key areas of interest include Data Science, Machine Learning and Data Visualization. I have over 4 years of experience in working with Python and its libraries.</p>
-						<!--<ul class="actions">-->
-							<!--<li><a href="#" class="button">Learn More</a></li>-->
-						<!--</ul>-->
+						<p>Hi, I’m Rishabh, a backend developer specializing in building scalable, data-intensive applications using AWS services. I design efficient cloud-based systems that process and analyze large datasets to solve real-world problems. With a strong focus on reliability and performance, I deliver solutions that scale with business needs.</p>
 					</section>
 
 
