Fixing minor typo

--- a/index.html
+++ b/index.html
@@ -393,7 +393,7 @@
                                                 // $('#response pre').html( data );
                                             },
                                             error: function( jqXhr, textStatus, errorThrown ){
-                                                console.lod(data);
+                                                console.log(data);
                                                 console.log( errorThrown );
                                                 alert("Error in sending Message. Please try again.!!");
                                             }
